# NSU_Robotics

./: README.md
module1/ex01/: commands.txt
module2/ex01/: .bashrc  ex01.txt
module2/ex02/: package_path_ros2topic.txt
module2/ex03/unkwerror/: package.xml  setup.cfg  setup.py
module2/ex04/: colcon_build.txt
module2/ex05/: rosnode_info.txt  rosnode_list.txt
module2/ex06/: cmd_vel.txt
module2/ex07/: parameter_server.txt  rosservice_list.txt
module2/ex08/: rqt_console.csv  three_turtles_launch.py
module2/ex09/full_name_interface/: CMakeLists.txt  package.xml
module2/ex10/text_to_cmd_vel/: package.xml  setup.py
module2/ex10/text_to_cmd_vel/text_to_cmd_vel/: publisher_member_function.py
module3/ex01/SummFullName/: package.xml  setup.cfg  setup.py
module3/ex01/SummFullName/SummFullName/: client_SummFullName_member_function.py  service_SummFullName_member_function.py
